src/App.css
/* ... */
video {
  width: 100vw;
  vertical-align: top;
}

.project-image {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.code-snippets {
  position: absolute;
  width: 450px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-height: 100vh; 
  overflow: hidden;
  display: grid;
  /* grid-template-rows: auto auto; */
  gap: 20px; 
}

.code-box {
  background-color: var(--code-box-background);
  padding: 2px;
  color: var(--code-box-text-color);
  font-size: 0.53rem !important;
  overflow: hidden;
}

@media (max-width: 580px) {
  .code-box {
    font-size: 0.43rem !important; 
  }
  .code-snippets {
    width: 360px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

/* Project descriptions section */
.project-descriptions {
  position: absolute;
  background-color: rgba(255, 255, 255, 0.0);
  height: auto;
  right: 0px;
  font-size: 0.6rem;
  border-radius: 8px;
  transition: flex 0.4s ease;
  z-index: 7;
}

.project-descriptions ul {
  list-style-type: none;
  background-color: transparent;
  z-index: 8;
}

.project-descriptions li {
  background-color: transparent;
  padding: 0px;
  cursor: pointer;
  transition: background-color 0.3s, transform 0.3s;
  color: var(--text-color);
}

.project-descriptions, 
.project-descriptions ul, 
.project-descriptions li {
  touch-action: pan-y;
}

.project-descriptions li:hover {
  color: var(--link-hover-color);
  background-color: var(--project-descriptions-hover-bg);
}

/* Slide content styling */
.project-image-container,
.code-container,
.project-description {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

/* Slide controls styling */
.slide-controls {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 19002;
}

.slide-controls button {
  background: none;
  border: 1px solid var(--link-color);
  color: var(--link-color);
  padding: 10px 20px;
  margin: 0 10px;
  cursor: pointer;
  font-size: 1rem;
}

.slide-controls button:hover {
  background-color: var(--link-hover-color);
  color: var(--text-color);
}

/* Project selector styling */
.project-selector {
  position: relative;
  top: 30%;
  z-index: 19001;
}

.project-selector ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

@media (max-width: 580px) {
  .project-selector ul {
    display: flex;
  }
  .project-selector {
    position: absolute;
    top: 97%;
    left: 50%;
    transform: translate(-50%, -50%)
  }
  .project-description {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%)
  }
}

.project-selector li {
  padding: 5px;
  cursor: pointer;
}

.project-selector li:hover {
  background-color: var(--project-descriptions-hover-bg);
}

.project-selector li.selected {
  background-color: var(--link-hover-color);
}

.project-selector img {
  width: 30px;
  height: 30px;
}

/* Project image */
.project-image {
  width: 30%;
  height: 30%;
}

/* Ensure the code box fills its container */
.code-box {
  width: 100%;
  height: 100%;
}

/* Slide controls styling */
.slide-controls {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
}

.slide-controls .dot {
  height: 15px;
  width: 15px;
  margin: 0 5px;
  background-color: var(--code-box-border-color);
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.slide-controls .dot.active {
  background-color: var(--link-hover-color);
}

.slide-controls .dot:hover {
  background-color: var(--link-hover-color);
}

@media (max-width: 580px) {
  .slide-controls {
    bottom: 10%;
  }
}


@media (max-width: 640px) {
  .project-image {
    width: 0;
    height: 0; 
  }
}

.dark-mode-toggle {
  fill: currentColor; /* Inherit color from parent */
}

.mymoon, .mysun {
  width: 20px;
  height: 20px;
  transition: transform 0.1s ease-out;
}


.cube {
  position: absolute;
  left: 20%;
  top: 20%;
  z-index: 7001;
  width: 190px;
  height:190px;
  animation: cubeanim 5s infinite;
  transform: rotate(5deg);
}

@keyframes cubeanim {
  50% {
    transform: translate(0px , -5px);       
  }
}

.circle {
  position: absolute;
  top: 35%;
  left: 65%;
  z-index: 7001;
  width: 190px;
  height:190px;
  animation: circleanim 5s infinite;
}

@keyframes circleanim {
  50% {
    transform: translate(0px , 20px) rotate(-5deg);       
  }
}

.trianglepyramid{
  position: absolute;
  left: 20%;
  top: 60%;
  z-index: 7001;
  width: 190px;
  height:190px;
  animation: trianglepyramidanim 8s infinite;
  transform: rotate(-5deg);
}

@keyframes trianglepyramidanim {
  50% {
    transform: translate(10px , -5px);       
  }
}

@media (max-width: 640px) {
  .circle {
    left: 50%;
  }
  .cube {
    left: 10%;
  }
  .trianglepyramid {
    left: 20%;
  }
}

.worldart{
  position: absolute;
  align-content: bottom;
  left: 0%;
  bottom: -50%;
  z-index: 7001;
  width: 100vw;
  height:80vw;
  z-index: 999;
}

@media (max-width: 1280px) {
  .worldart {
      bottom: -30%;
  }
}
@media (max-width: 1040px) {
  .worldart {
      bottom: -20%;
  }
}
@media (max-width: 840px) {
  .worldart {
      bottom: -10%;
  }
}
@media (max-width: 640px) {
  .worldart {
      bottom: 0%;
  }
}


.profile{
  display: flex;
  width: 30px;
  height: 30px;
}

.profilepic {
  padding-left: 5px;

}

.email {
  display: inline-flex;
}
/* ... */

